ghc-4335c07/testsuite/tests/partial-sigs/should_fail/ExtraConstraintsWildcardInExpressionSignature.hs
{-# LANGUAGE PartialTypeSignatures #-}

module ExtraConstraintsWildcardInExpressionSignature where

foo x y = ((==) :: _ => _) x y
